# SonixCameraAE

./: .gitignore
app/: build.gradle
app/src/androidTest/java/com/braincs/attrsc/sonixcameraae/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/braincs/attrsc/sonixcameraae/: MainActivity.java
app/src/main/java/com/braincs/attrsc/sonixcameraae/jni/: SonixFaceAE.java
app/src/main/jni/: CMakeLists.txt  sonix_face_ae_jni.cpp
app/src/main/jni/include/: SonixCamera.h  XUOptDev.h  util.h
app/src/main/jni/src/: SonixCamera.c  XUOptDev.c
app/src/main/res/values/: strings.xml
app/src/test/java/com/braincs/attrsc/sonixcameraae/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
